Fix QA issues